--- a/Bugs in Samples/wwwroot/css/ig-theme.css
+++ b/Bugs in Samples/wwwroot/css/ig-theme.css
@@ -1,54 +1,36 @@
 :root {
-    --ig-font-family: "Open Sans";
-    --ig-primary-h: 216deg;
-    --ig-primary-s: 56%;
-    --ig-primary-l: 39%;
-    --ig-secondary-h: 216deg;
-    --ig-secondary-s: 56%;
-    --ig-secondary-l: 39%;
-    --ig-error-h: 0deg;
-    --ig-error-s: 100%;
-    --ig-error-l: 33%;
-    --ig-success-h: 120deg;
-    --ig-success-s: 77%;
-    --ig-success-l: 27%;
-    --ig-warn-h: 30deg;
-    --ig-warn-s: 3%;
-    --ig-warn-l: 46%;
-    --ig-primary-300-contrast: white;
-    --ig-primary-400-contrast: white;
-    --ig-primary-500-contrast: white;
+    --ig-font-family: "Roboto";
+    --ig-primary-h: 211deg;
+    --ig-primary-s: 100%;
+    --ig-primary-l: 50%;
+    --ig-secondary-h: 208deg;
+    --ig-secondary-s: 7%;
+    --ig-secondary-l: 46%;
+    --ig-surface-h: 210deg;
+    --ig-surface-s: 17%;
+    --ig-surface-l: 98%;
+    --ig-error-h: 354deg;
+    --ig-error-s: 70%;
+    --ig-error-l: 54%;
+    --ig-success-h: 134deg;
+    --ig-success-s: 61%;
+    --ig-success-l: 41%;
+    --ig-warn-h: 45deg;
+    --ig-warn-s: 100%;
+    --ig-warn-l: 51%;
+    --ig-info-h: 188deg;
+    --ig-info-s: 78%;
+    --ig-info-l: 41%;
     --ig-primary-600-contrast: white;
     --ig-primary-700-contrast: white;
-    --ig-primary-A100-contrast: white;
-    --ig-primary-A200-contrast: white;
     --ig-primary-A400-contrast: white;
-    --ig-secondary-300-contrast: white;
-    --ig-secondary-400-contrast: white;
     --ig-secondary-500-contrast: white;
-    --ig-secondary-A100-contrast: white;
-    --ig-secondary-A200-contrast: white;
-    --ig-error-200-contrast: white;
-    --ig-error-300-contrast: white;
-    --ig-error-400-contrast: white;
-    --ig-error-500-contrast: white;
     --ig-error-600-contrast: white;
-    --ig-error-A100-contrast: white;
-    --ig-error-A200-contrast: white;
     --ig-error-A400-contrast: white;
-    --ig-success-300-contrast: white;
-    --ig-success-400-contrast: white;
-    --ig-success-500-contrast: white;
-    --ig-success-600-contrast: white;
-    --ig-success-700-contrast: white;
-    --ig-success-800-contrast: white;
-    --ig-success-A400-contrast: white;
-    --ig-warn-600-contrast: white;
-    --ig-warn-700-contrast: white;
-    --ig-warn-800-contrast: white;
-    --ig-warn-900-contrast: white;
-    --ig-warn-A400-contrast: white;
-    --ig-warn-A700-contrast: white;
+    --ig-info-600-contrast: black;
+    --ig-info-700-contrast: black;
+    --ig-info-800-contrast: black;
+    --ig-info-A400-contrast: black;
 }
 
 /* Charts */
