Bugs in Samples updates

--- a/Bugs in Samples/wwwroot/css/ig-theme.css
+++ b/Bugs in Samples/wwwroot/css/ig-theme.css
@@ -1,36 +1,5 @@
 :root {
-    --ig-font-family: "Roboto";
-    --ig-primary-h: 211deg;
-    --ig-primary-s: 100%;
-    --ig-primary-l: 50%;
-    --ig-secondary-h: 208deg;
-    --ig-secondary-s: 7%;
-    --ig-secondary-l: 46%;
-    --ig-surface-h: 210deg;
-    --ig-surface-s: 17%;
-    --ig-surface-l: 98%;
-    --ig-error-h: 354deg;
-    --ig-error-s: 70%;
-    --ig-error-l: 54%;
-    --ig-success-h: 134deg;
-    --ig-success-s: 61%;
-    --ig-success-l: 41%;
-    --ig-warn-h: 45deg;
-    --ig-warn-s: 100%;
-    --ig-warn-l: 51%;
-    --ig-info-h: 188deg;
-    --ig-info-s: 78%;
-    --ig-info-l: 41%;
-    --ig-primary-600-contrast: white;
-    --ig-primary-700-contrast: white;
-    --ig-primary-A400-contrast: white;
-    --ig-secondary-500-contrast: white;
-    --ig-error-600-contrast: white;
-    --ig-error-A400-contrast: white;
-    --ig-info-600-contrast: black;
-    --ig-info-700-contrast: black;
-    --ig-info-800-contrast: black;
-    --ig-info-A400-contrast: black;
+    --ig-font-family: 'Titillium Web', sans-serif;
 }
 
 /* Charts */
