--- a/Bugs in Samples/Pages/SpaceBetween.razor
+++ b/Bugs in Samples/Pages/SpaceBetween.razor
@@ -1,4 +1,4 @@
-@page "/space-between"
+@page "/"
 
 <div class="column-layout space-between-container">
     <div class="column-layout group">
@@ -7,14 +7,14 @@
                 Button
                 <IgbRipple></IgbRipple>
             </IgbButton>
-            <IgbButton Variant="ButtonVariant.Flat" @onclick="@(e => Dropdown1?.Toggle(Button))" @ref="Button" class="button" space-between-scope>
+            <IgbButton Variant="ButtonVariant.Flat" @onclick="@(e => Dropdown?.Toggle(Button))" @ref="Button" class="button" space-between-scope>
                 <span>With dropdown</span>
                 <span class="material-icons">
                     keyboard_arrow_down
                 </span>
                 <IgbRipple></IgbRipple>
             </IgbButton>
-            <IgbDropdown @ref="Dropdown1" class="dropdown" space-between-scope>
+            <IgbDropdown @ref="Dropdown" class="dropdown" space-between-scope>
                 <IgbDropdownItem>
                     Option
                 </IgbDropdownItem>
@@ -57,5 +57,5 @@
 
 @code {
     private IgbButton? Button;
-    private IgbDropdown? Dropdown1;
+    private IgbDropdown? Dropdown;
 }
