--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -7,6 +7,10 @@
     align-content: flex-start;
     height: 100%;
 }
+.column-layout {
+    display: flex;
+    flex-direction: column;
+}
 .group {
     flex-wrap: wrap;
     justify-content: center;
@@ -29,6 +33,30 @@
     min-width: 50px;
     min-height: 50px;
 }
+.group_1 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    gap: 24px;
+    position: relative;
+    min-width: 50px;
+    min-height: 50px;
+}
+.card {
+    width: 320px;
+    height: max-content;
+    min-width: 320px;
+    flex-shrink: 0;
+}
+.group_2 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    gap: 16px;
+    position: relative;
+    min-width: 50px;
+    min-height: 50px;
+}
 .button {
     height: max-content;
     min-width: min-content;
@@ -37,9 +65,36 @@
 .dropdown {
     min-width: min-content;
 }
+.button_1 {
+    height: max-content;
+    min-width: min-content;
+}
 .button::part(base) {
     color: hsla(var(--ig-success-500));
 }
 .dropdown::part(base) {
     height: max-content;
+}
+.body-content {
+    min-width: 50px;
+    min-height: 50px;
+}
+.actions-content {
+    min-width: 50px;
+    min-height: 40px;
+}
+.avatar {
+    --background: none;
+}
+.icon {
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+}
+.list {
+    height: max-content;
+    flex-shrink: 0;
+}
+.custom-dialog {
+    display: none;
 }
