--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -1,15 +1,12 @@
-.row-layout {
+.column-layout {
     display: flex;
+    flex-direction: column;
 }
 .buttons-container {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
     height: 100%;
-}
-.column-layout {
-    display: flex;
-    flex-direction: column;
 }
 .group {
     flex-wrap: wrap;
@@ -24,11 +21,23 @@
     flex-grow: 1;
     flex-basis: 0;
 }
+.row-layout {
+    display: flex;
+}
 .buttons {
     justify-content: flex-start;
     align-items: center;
     align-content: flex-start;
     gap: 16px;
+    position: relative;
+    min-width: 50px;
+    min-height: 50px;
+}
+.group_1 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    gap: 24px;
     position: relative;
     min-width: 50px;
     min-height: 50px;
@@ -39,7 +48,7 @@
     min-width: 320px;
     flex-shrink: 0;
 }
-.group_1 {
+.group_2 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -48,14 +57,24 @@
     min-width: 50px;
     min-height: 50px;
 }
-.group_2 {
+.group_3 {
+    background-color: hsla(var(--ig-secondary-800));
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
-    gap: 24px;
+    gap: 8px;
     position: relative;
+    padding: 24px;
     min-width: 50px;
     min-height: 50px;
+}
+.group_4 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    gap: 16px;
+    position: relative;
+    min-width: 50px;
 }
 .button {
     height: max-content;
@@ -91,10 +110,19 @@
     width: 24px;
     height: 24px;
 }
+.content {
+    color: hsla(var(--ig-surface-500));
+    height: max-content;
+    min-width: min-content;
+}
 .list {
     height: max-content;
     flex-shrink: 0;
 }
 .custom-dialog {
     display: none;
+}
+.badge {
+    width: max-content;
+    height: max-content;
 }
