Bugs in Samples updates

--- a/Bugs in Samples/Pages/CardsOpacity.razor
+++ b/Bugs in Samples/Pages/CardsOpacity.razor
@@ -125,7 +125,7 @@
     </div>
     <div class="column-layout group">
         <h6 class="h6">
-            Issue REPRODUCED IN: Blazor and Web Components generated apps
+            Issue REPRODUCED IN: Blazor and Web Components generated apps with Material and Fluent Themes
         </h6>
         <div class="row-layout group_1">
             <p class="typography__subtitle-1 text">
