--- a/Bugs in Samples/wwwroot/css/ig-theme.css
+++ b/Bugs in Samples/wwwroot/css/ig-theme.css
@@ -1,33 +1,20 @@
 :root {
-    --ig-font-family: "Roboto";
-    --ig-primary-h: 211deg;
-    --ig-primary-s: 100%;
-    --ig-primary-l: 50%;
-    --ig-secondary-h: 208deg;
-    --ig-secondary-s: 7%;
-    --ig-secondary-l: 46%;
-    --ig-surface-h: 226deg;
-    --ig-surface-s: 23%;
-    --ig-surface-l: 18%;
-    --ig-error-h: 354deg;
-    --ig-error-s: 70%;
-    --ig-error-l: 54%;
-    --ig-success-h: 134deg;
-    --ig-success-s: 61%;
-    --ig-success-l: 41%;
-    --ig-warn-h: 45deg;
-    --ig-warn-s: 100%;
-    --ig-warn-l: 51%;
-    --ig-info-h: 188deg;
-    --ig-info-s: 78%;
-    --ig-info-l: 41%;
+    --ig-font-family: 'Titillium Web', sans-serif;
+    --ig-secondary-h: 114deg;
+    --ig-secondary-s: 61%;
+    --ig-secondary-l: 63%;
+    --ig-surface-h: 0deg;
+    --ig-surface-s: 0%;
+    --ig-surface-l: 13%;
     --ig-grays-h: 0deg;
     --ig-grays-s: 0%;
     --ig-grays-l: 100%;
-    --ig-primary-600-contrast: white;
-    --ig-primary-700-contrast: white;
-    --ig-primary-A400-contrast: white;
-    --ig-secondary-500-contrast: white;
+    --ig-secondary-600-contrast: black;
+    --ig-secondary-700-contrast: black;
+    --ig-secondary-800-contrast: black;
+    --ig-secondary-900-contrast: black;
+    --ig-secondary-A400-contrast: black;
+    --ig-secondary-A700-contrast: black;
     --ig-surface-50-contrast: white;
     --ig-surface-100-contrast: white;
     --ig-surface-200-contrast: white;
@@ -42,12 +29,6 @@
     --ig-surface-A200-contrast: white;
     --ig-surface-A400-contrast: white;
     --ig-surface-A700-contrast: white;
-    --ig-error-600-contrast: white;
-    --ig-error-A400-contrast: white;
-    --ig-info-600-contrast: black;
-    --ig-info-700-contrast: black;
-    --ig-info-800-contrast: black;
-    --ig-info-A400-contrast: black;
     --ig-grays-50-contrast: black;
     --ig-grays-100-contrast: black;
     --ig-grays-200-contrast: black;
