--- a/Bugs in Samples/wwwroot/css/ig-theme.css
+++ b/Bugs in Samples/wwwroot/css/ig-theme.css
@@ -1,84 +1,5 @@
 :root {
-    --ig-font-family: "Open Sans";
-    --ig-primary-h: 147deg;
-    --ig-primary-s: 55%;
-    --ig-primary-l: 29%;
-    --ig-secondary-h: 147deg;
-    --ig-secondary-s: 55%;
-    --ig-secondary-l: 29%;
-    --ig-surface-h: 0deg;
-    --ig-surface-s: 0%;
-    --ig-surface-l: 13%;
-    --ig-error-h: 0deg;
-    --ig-error-s: 100%;
-    --ig-error-l: 33%;
-    --ig-success-h: 120deg;
-    --ig-success-s: 77%;
-    --ig-success-l: 27%;
-    --ig-warn-h: 30deg;
-    --ig-warn-s: 3%;
-    --ig-warn-l: 46%;
-    --ig-grays-h: 0deg;
-    --ig-grays-s: 0%;
-    --ig-grays-l: 100%;
-    --ig-primary-300-contrast: white;
-    --ig-primary-400-contrast: white;
-    --ig-primary-500-contrast: white;
-    --ig-primary-600-contrast: white;
-    --ig-primary-700-contrast: white;
-    --ig-primary-A400-contrast: white;
-    --ig-secondary-300-contrast: white;
-    --ig-secondary-400-contrast: white;
-    --ig-secondary-500-contrast: white;
-    --ig-surface-50-contrast: white;
-    --ig-surface-100-contrast: white;
-    --ig-surface-200-contrast: white;
-    --ig-surface-300-contrast: white;
-    --ig-surface-400-contrast: white;
-    --ig-surface-500-contrast: white;
-    --ig-surface-600-contrast: white;
-    --ig-surface-700-contrast: white;
-    --ig-surface-800-contrast: white;
-    --ig-surface-900-contrast: white;
-    --ig-surface-A100-contrast: white;
-    --ig-surface-A200-contrast: white;
-    --ig-surface-A400-contrast: white;
-    --ig-surface-A700-contrast: white;
-    --ig-error-200-contrast: white;
-    --ig-error-300-contrast: white;
-    --ig-error-400-contrast: white;
-    --ig-error-500-contrast: white;
-    --ig-error-600-contrast: white;
-    --ig-error-A100-contrast: white;
-    --ig-error-A200-contrast: white;
-    --ig-error-A400-contrast: white;
-    --ig-success-300-contrast: white;
-    --ig-success-400-contrast: white;
-    --ig-success-500-contrast: white;
-    --ig-success-600-contrast: white;
-    --ig-success-700-contrast: white;
-    --ig-success-800-contrast: white;
-    --ig-success-A400-contrast: white;
-    --ig-warn-600-contrast: white;
-    --ig-warn-700-contrast: white;
-    --ig-warn-800-contrast: white;
-    --ig-warn-900-contrast: white;
-    --ig-warn-A400-contrast: white;
-    --ig-warn-A700-contrast: white;
-    --ig-grays-50-contrast: black;
-    --ig-grays-100-contrast: black;
-    --ig-grays-200-contrast: black;
-    --ig-grays-300-contrast: black;
-    --ig-grays-400-contrast: black;
-    --ig-grays-500-contrast: black;
-    --ig-grays-600-contrast: black;
-    --ig-grays-700-contrast: black;
-    --ig-grays-800-contrast: black;
-    --ig-grays-900-contrast: black;
-    --ig-grays-A100-contrast: black;
-    --ig-grays-A200-contrast: black;
-    --ig-grays-A400-contrast: black;
-    --ig-grays-A700-contrast: black;
+    --ig-font-family: 'Titillium Web', sans-serif;
 }
 
 /* Charts */
