--- a/Bugs in Samples/Shared/MainLayout.razor
+++ b/Bugs in Samples/Shared/MainLayout.razor
@@ -1,60 +1,78 @@
 @inherits LayoutComponentBase
 @inject NavigationManager NavigationManager
 
-<div class="row-layout master-view-container">
-    <IgbNavDrawer Open="true" Position="NavDrawerPosition.Relative" class="nav-drawer" master-view-scope>
-        <IgbNavDrawerItem @onclick="@(e => Navigate(""))">
-            <span slot="icon">
-                <span class="material-icons icon">
-                    bug_report
+<div class="column-layout master-view-container">
+    <IgbNavbar class="navbar" master-view-scope>
+        <div slot="start">
+            <IgbIconButton Variant="IconButtonVariant.Flat" @onclick="@(e => NavDrawer?.Toggle())" class="icon-button" master-view-scope>
+                <span class="material-icons">
+                    menu
                 </span>
                 <IgbRipple></IgbRipple>
-            </span>
-            <div slot="content">Buttons</div>
-        </IgbNavDrawerItem>
-        <IgbNavDrawerItem @onclick="@(e => Navigate("space-between"))">
-            <span slot="icon">
-                <span class="material-icons icon">
-                    bug_report
+            </IgbIconButton>
+        </div>
+        <div>
+            <p class="typography__subtitle-2 text">
+                BUGS IN SAMPLES
+            </p>
+        </div>
+    </IgbNavbar>
+    <div class="row-layout group">
+        <IgbNavDrawer Open="true" Position="NavDrawerPosition.Relative" @ref="NavDrawer" class="nav-drawer" master-view-scope>
+            <IgbNavDrawerItem @onclick="@(e => Navigate(""))">
+                <span slot="icon">
+                    <span class="material-icons icon">
+                        bug_report
+                    </span>
+                    <IgbRipple></IgbRipple>
                 </span>
-                <IgbRipple></IgbRipple>
-            </span>
-            <div slot="content">Space Between</div>
-        </IgbNavDrawerItem>
-        <IgbNavDrawerItem @onclick="@(e => Navigate("cards-opacity"))">
-            <span slot="icon">
-                <span class="material-icons icon">
-                    bug_report
+                <div slot="content">Buttons</div>
+            </IgbNavDrawerItem>
+            <IgbNavDrawerItem @onclick="@(e => Navigate("space-between"))">
+                <span slot="icon">
+                    <span class="material-icons icon">
+                        bug_report
+                    </span>
+                    <IgbRipple></IgbRipple>
                 </span>
-                <IgbRipple></IgbRipple>
-            </span>
-            <div slot="content">Cards Opacity</div>
-        </IgbNavDrawerItem>
-        <IgbNavDrawerItem @onclick="@(e => Navigate("card-actions"))">
-            <span slot="icon">
-                <span class="material-icons icon">
-                    bug_report
+                <div slot="content">Space Between</div>
+            </IgbNavDrawerItem>
+            <IgbNavDrawerItem @onclick="@(e => Navigate("cards-opacity"))">
+                <span slot="icon">
+                    <span class="material-icons icon">
+                        bug_report
+                    </span>
+                    <IgbRipple></IgbRipple>
                 </span>
-                <IgbRipple></IgbRipple>
-            </span>
-            <div slot="content">Card Action Buttons</div>
-        </IgbNavDrawerItem>
-        <IgbNavDrawerItem @onclick="@(e => Navigate("dialog"))">
-            <span slot="icon">
-                <span class="material-icons icon">
-                    bug_report
+                <div slot="content">Cards Opacity</div>
+            </IgbNavDrawerItem>
+            <IgbNavDrawerItem @onclick="@(e => Navigate("card-actions"))">
+                <span slot="icon">
+                    <span class="material-icons icon">
+                        bug_report
+                    </span>
+                    <IgbRipple></IgbRipple>
                 </span>
-                <IgbRipple></IgbRipple>
-            </span>
-            <div slot="content">Dialogs</div>
-        </IgbNavDrawerItem>
-    </IgbNavDrawer>
-    <div class="view-container">
-        @Body
+                <div slot="content">Card Action Buttons</div>
+            </IgbNavDrawerItem>
+            <IgbNavDrawerItem @onclick="@(e => Navigate("dialog"))">
+                <span slot="icon">
+                    <span class="material-icons icon">
+                        bug_report
+                    </span>
+                    <IgbRipple></IgbRipple>
+                </span>
+                <div slot="content">Dialogs</div>
+            </IgbNavDrawerItem>
+        </IgbNavDrawer>
+        <div class="view-container">
+            @Body
+        </div>
     </div>
 </div>
 
 @code {
+    private IgbNavDrawer? NavDrawer;
     private void Navigate(string path)
     {
         NavigationManager.NavigateTo(path);
