--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -58,7 +58,7 @@
     min-height: 50px;
 }
 .group_3 {
-    background-color: hsla(var(--ig-secondary-800));
+    background-color: #893976;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
