--- a/Bugs in Samples/Pages/CardsOpacity.razor.css
+++ b/Bugs in Samples/Pages/CardsOpacity.razor.css
@@ -41,7 +41,7 @@
     min-height: 50px;
 }
 .group {
-    background-color: hsla(var(--ig-secondary-800));
+    background-color: #893976;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
