--- a/Bugs in Samples/Pages/Dialog.razor.css
+++ b/Bugs in Samples/Pages/Dialog.razor.css
@@ -49,7 +49,7 @@
     min-height: 50px;
 }
 .group_2 {
-    background-color: hsla(var(--ig-secondary-800));
+    background-color: #893976;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
