--- a/Bugs in Samples/Pages/CardActions.razor.css
+++ b/Bugs in Samples/Pages/CardActions.razor.css
@@ -32,7 +32,7 @@
     flex-shrink: 0;
 }
 .group {
-    background-color: #893976;
+    background-color: #24272B;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
