--- a/Bugs in Samples/Pages/CardsOpacity.razor
+++ b/Bugs in Samples/Pages/CardsOpacity.razor
@@ -134,7 +134,7 @@
             <h6 class="h6">
                 REPRODUCED IN: Blazor and WebComponents generated apps
             </h6>
-            <IgbBadge Variant="BadgeVariant.Info" class="badge" cards-opacity-scope>
+            <IgbBadge Variant="BadgeVariant.Success" class="badge" cards-opacity-scope>
                 BUG CREATED
             </IgbBadge>
         </div>
