--- a/Bugs in Samples/Pages/SpaceBetween.razor
+++ b/Bugs in Samples/Pages/SpaceBetween.razor
@@ -45,10 +45,10 @@
             <p class="typography__subtitle-1 content">
                 If a container, with 2 inner elements, has horizontal alignment set to space between, if one of the elements has a dropdown, the space between is altered, since it's considering the dropdown as a 3rd item.
             </p>
-            <h6 class="content">
+            <h6 class="h6">
                 REPRODUCED IN: AppBuilder Edit &amp; Preview, Blazor and Web Components
             </h6>
-            <IgbBadge Variant="BadgeVariant.Info" class="badge" space-between-scope>
+            <IgbBadge Variant="BadgeVariant.Success" class="badge" space-between-scope>
                 BUG CREATED
             </IgbBadge>
         </div>
