--- a/Bugs in Samples/Pages/Buttons.razor
+++ b/Bugs in Samples/Pages/Buttons.razor
@@ -121,10 +121,10 @@
             <p class="typography__subtitle-1 content">
                 When a button with RAISED or FLAT type has the icon switched turned on, it grows 2px in height
             </p>
-            <h6 class="content">
-                REPRODUCED IN: AppBuilder Edit &amp;amp; Preview and Angular app
+            <h6 class="h6">
+                REPRODUCED IN: AppBuilder Edit/Preview and Angular app
             </h6>
-            <IgbBadge Variant="BadgeVariant.Info" class="badge" buttons-scope>
+            <IgbBadge Variant="BadgeVariant.Success" class="badge" buttons-scope>
                 BUG CREATED
             </IgbBadge>
         </div>
@@ -132,10 +132,10 @@
             <p class="typography__subtitle-1 content">
                 Button's INNER PADDING in the generated apps is lacking, so they look smaller than Angular
             </p>
-            <h6 class="content">
+            <h6 class="h6">
                 REPRODUCED IN: Blazor and Web Components apps
             </h6>
-            <IgbBadge Variant="BadgeVariant.Info" class="badge" buttons-scope>
+            <IgbBadge Variant="BadgeVariant.Success" class="badge" buttons-scope>
                 BUG CREATED
             </IgbBadge>
         </div>
@@ -143,10 +143,10 @@
             <p class="typography__subtitle-1 content">
                 When i change the foreground color of just ONE button, all the buttons get changed their foregrounds, except if they are part of a component. With the exception of buttons placed in custom dialog window content
             </p>
-            <h6 class="content">
+            <h6 class="h6">
                 REPRODUCED IN: Blazor and Web Components apps
             </h6>
-            <IgbBadge Variant="BadgeVariant.Info" class="badge" buttons-scope>
+            <IgbBadge Variant="BadgeVariant.Success" class="badge" buttons-scope>
                 BUG CREATED
             </IgbBadge>
         </div>
