--- a/Bugs in Samples/Pages/SpaceBetween.razor.css
+++ b/Bugs in Samples/Pages/SpaceBetween.razor.css
@@ -30,7 +30,7 @@
     position: relative;
 }
 .group_2 {
-    background-color: #893976;
+    background-color: #24272B;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -61,6 +61,11 @@
 }
 .content {
     color: hsla(var(--ig-surface-500));
+    height: max-content;
+    min-width: min-content;
+}
+.h6 {
+    color: hsla(var(--ig-secondary-300));
     height: max-content;
     min-width: min-content;
 }
