Bugs in Samples updates

--- a/Bugs in Samples/Pages/Buttons.razor
+++ b/Bugs in Samples/Pages/Buttons.razor
@@ -114,11 +114,11 @@
     </div>
     <span class="custom-dialog">Dialog not yet available in Blazor</span>
     <div class="column-layout group_3">
-        <h6 class="content">
+        <h6 class="h6">
             ISSUES
         </h6>
         <div class="row-layout group_4">
-            <p class="typography__subtitle-1 content">
+            <p class="typography__subtitle-1 text">
                 When a button with RAISED or FLAT type has the icon switched turned on, it grows 2px in height
             </p>
             <h6 class="h6">
@@ -129,7 +129,7 @@
             </IgbBadge>
         </div>
         <div class="row-layout group_4">
-            <p class="typography__subtitle-1 content">
+            <p class="typography__subtitle-1 text">
                 Button's INNER PADDING in the generated apps is lacking, so they look smaller than Angular
             </p>
             <h6 class="h6">
@@ -140,7 +140,7 @@
             </IgbBadge>
         </div>
         <div class="row-layout group_4">
-            <p class="typography__subtitle-1 content">
+            <p class="typography__subtitle-1 text">
                 When i change the foreground color of just ONE button, all the buttons get changed their foregrounds, except if they are part of a component. With the exception of buttons placed in custom dialog window content
             </p>
             <h6 class="h6">
