--- a/Bugs in Samples/Pages/CardActions.razor
+++ b/Bugs in Samples/Pages/CardActions.razor
@@ -97,7 +97,7 @@
         </IgbCard>
     </div>
     <div class="column-layout group">
-        <h6 class="content">
+        <h6 class="h6">
             Both issues REPRODUCED IN: Blazor and Web Components generated apps
         </h6>
         <div class="row-layout group_1">
@@ -106,7 +106,7 @@
             </p>
         </div>
         <div class="row-layout group_1">
-            <p class="typography__subtitle-1 content">
+            <p class="typography__subtitle-1 text_1">
                 Action icons look justified, instead of being aligned to the left or right
             </p>
         </div>
