--- a/Bugs in Samples/Pages/Dialog.razor
+++ b/Bugs in Samples/Pages/Dialog.razor
@@ -109,38 +109,38 @@
     <span class="dialog-min-width">Dialog not yet available in Blazor</span>
     <span class="dialog-min-width">Dialog not yet available in Blazor</span>
     <div class="column-layout group_2">
-        <h6 class="content_1">
+        <h6 class="h6">
             ISSUES
         </h6>
         <div class="row-layout group_3">
-            <p class="typography__subtitle-1 content_1">
+            <p class="typography__subtitle-1 text">
                 The top-left padding of the dialog doesnt match the bottom-right padding.
             </p>
-            <h6 class="content_1">
+            <h6 class="h6">
                 REPRODUCED IN: AppBuilder Edit &amp; Preview and Angular generated app
             </h6>
         </div>
         <div class="row-layout group_3">
-            <p class="typography__subtitle-1 content_1">
+            <p class="typography__subtitle-1 text">
                 The font of the title shown in AppBuilder preview doesnt match the generated font 
             </p>
-            <h6 class="content_1">
+            <h6 class="h6">
                 REPRODUCED IN: Angular and Web Components generated apps
             </h6>
         </div>
         <div class="row-layout group_3">
-            <p class="typography__subtitle-1 content_1">
+            <p class="typography__subtitle-1 text">
                 Action buttons dont have spacing between them
             </p>
-            <h6 class="content_1">
+            <h6 class="h6">
                 REPRODUCED IN: AppBuilder Edit &amp; Preview
             </h6>
         </div>
         <div class="row-layout group_3">
-            <p class="typography__subtitle-1 content_1">
+            <p class="typography__subtitle-1 text">
                 Dialog is cropped
             </p>
-            <h6 class="content_1">
+            <h6 class="h6">
                 REPRODUCED IN: Web Components generated app
             </h6>
         </div>
