--- a/Bugs in Samples/Pages/SpaceBetween.razor
+++ b/Bugs in Samples/Pages/SpaceBetween.razor
@@ -38,11 +38,11 @@
         </div>
     </div>
     <div class="column-layout group_2">
-        <h6 class="content">
+        <h6 class="h6">
             ISSUES
         </h6>
         <div class="row-layout group_3">
-            <p class="typography__subtitle-1 content">
+            <p class="typography__subtitle-1 text">
                 If a container, with 2 inner elements, has horizontal alignment set to space between, if one of the elements has a dropdown, the space between is altered, since it's considering the dropdown as a 3rd item.
             </p>
             <h6 class="h6">
