--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -110,13 +110,13 @@
     width: 24px;
     height: 24px;
 }
-.content {
+.h6 {
     color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
 }
-.h6 {
-    color: hsla(var(--ig-secondary-300));
+.text {
+    color: hsla(var(--ig-gray-300));
     height: max-content;
     min-width: min-content;
 }
