--- a/Bugs in Samples/Pages/CardActions.razor.css
+++ b/Bugs in Samples/Pages/CardActions.razor.css
@@ -64,17 +64,22 @@
 .image {
     height: 100%;
 }
-.content {
+.h6 {
     color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
 }
 .text {
-    color: hsla(var(--ig-surface-500));
+    color: hsla(var(--ig-gray-300));
     height: max-content;
     min-width: min-content;
     flex-grow: 1;
     flex-basis: 0;
+}
+.text_1 {
+    color: hsla(var(--ig-gray-300));
+    height: max-content;
+    min-width: min-content;
 }
 .button {
     height: max-content;
