--- a/Bugs in Samples/Pages/CardsOpacity.razor.css
+++ b/Bugs in Samples/Pages/CardsOpacity.razor.css
@@ -89,7 +89,7 @@
     min-width: min-content;
 }
 .text {
-    color: hsla(var(--ig-surface-500));
+    color: hsla(var(--ig-gray-300));
     width: 733px;
     height: max-content;
     min-width: min-content;
